--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,3 +1,41 @@
-<p>
-  progress works!
-</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Barra de progreso</h5>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <div class="input-group">
+                    <span class="input-group-btn">
+                      <button class="btn btn-primary" type="button" (click)="changeValue(-5)">
+                        <i class="mdi mdi-minus"></i>
+                      </button>
+                    </span>
+                    <input name="percentage" [(ngModel)]="percentage" type="text" class="form-control">
+                    <span class="input-group-btn">
+                      <button class="btn btn-primary" type="button" (click)="changeValue(+5)">
+                        <i class="mdi mdi-plus"></i>
+                      </button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                Tarjeta 2
+            </div>
+        </div>
+    </div>
+</div>
