--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -4,7 +4,7 @@
             <div class="card-body">
                 <h5 class="card-title">Barra de progreso</h5>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'"></div>
                 </div>
             </div>
         </div>
