created component incremento and components module

--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -15,26 +15,14 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                      <button class="btn btn-primary" type="button" (click)="changeValue(-5)">
-                        <i class="mdi mdi-minus"></i>
-                      </button>
-                    </span>
-                    <input name="percentage" [(ngModel)]="percentage" type="text" class="form-control">
-                    <span class="input-group-btn">
-                      <button class="btn btn-primary" type="button" (click)="changeValue(+5)">
-                        <i class="mdi mdi-plus"></i>
-                      </button>
-                    </span>
-                </div>
+                <app-incremento></app-incremento>
             </div>
         </div>
     </div>
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                Tarjeta 2
+                <app-incremento></app-incremento>
             </div>
         </div>
     </div>
