--- a/src/app/components/incremento/incremento.component.html
+++ b/src/app/components/incremento/incremento.component.html
@@ -1,3 +1,4 @@
+<h3>{{leyend}}</h3>
 <div class="input-group">
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="changeValue(-5)">
