--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -2,9 +2,12 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Barra de progreso</h5>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage + '%'"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage1" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage1 + '%'"></div>
+                </div>
+                <br>
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" [attr.valueAriaNow]="percentage2" aria-valuemin="0" aria-valuemax="100" [style.width]="percentage2 + '%'"></div>
                 </div>
             </div>
         </div>
@@ -15,14 +18,14 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <app-incremento></app-incremento>
+                <app-incremento (changeValueEvent)="percentage1 = $event" [title]="title" [percentage]="percentage1"></app-incremento>
             </div>
         </div>
     </div>
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <app-incremento></app-incremento>
+                <app-incremento (changeValueEvent)="percentage2 = $event" title="$title" [percentage]="percentage2"></app-incremento>
             </div>
         </div>
     </div>
