--- a/src/app/components/incremento/incremento.component.html
+++ b/src/app/components/incremento/incremento.component.html
@@ -5,7 +5,7 @@
         <i class="mdi mdi-minus"></i>
       </button>
     </span>
-    <input name="percentage" [(ngModel)]="percentage" type="text" class="form-control">
+    <input name="percentage" [(ngModel)]="percentage" (ngModelChange)="changeValue($event)" type="number" min="1" max="100" class="form-control">
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="changeValue(+5)">
         <i class="mdi mdi-plus"></i>
