--- a/src/app/components/incremento/incremento.component.html
+++ b/src/app/components/incremento/incremento.component.html
@@ -1,11 +1,11 @@
-<h3>{{leyend}}</h3>
+<h3>{{leyend}} - {{percentage}}</h3>
 <div class="input-group">
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="changeValue(-5)">
         <i class="mdi mdi-minus"></i>
       </button>
     </span>
-    <input name="percentage" [(ngModel)]="percentage" (ngModelChange)="changeValueInput($event)" type="number" min="1" max="100" class="form-control">
+    <input #txtProgress name="percentage" [(ngModel)]="percentage" (ngModelChange)="changeValueInput($event)" type="number" min="1" max="100" class="form-control">
     <span class="input-group-btn">
       <button class="btn btn-primary" type="button" (click)="changeValue(+5)">
         <i class="mdi mdi-plus"></i>
