--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -3,12 +3,9 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-
-                <div style="display: block">
-                    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
-          </canvas>
-                </div>
-
+                <h4 class="card-title">{{graficos.grafico1.leyenda}}</h4>
+                <app-graphics [chartData]="graficos.grafico1.data" [chartLabels]="graficos.grafico1.labels" [chartType]="graficos.grafico1.type">
+                </app-graphics>
             </div>
         </div>
     </div>
@@ -16,10 +13,9 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <div style="display: block">
-                    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
-          </canvas>
-                </div>
+                <h4 class="card-title">{{graficos.grafico2.leyenda}}</h4>
+                <app-graphics [chartData]="graficos.grafico2.data" [chartLabels]="graficos.grafico2.labels" [chartType]="graficos.grafico2.type">
+                </app-graphics>
             </div>
         </div>
     </div>
@@ -31,10 +27,9 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <div style="display: block">
-                    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
-          </canvas>
-                </div>
+                <h4 class="card-title">{{graficos.grafico3.leyenda}}</h4>
+                <app-graphics [chartData]="graficos.grafico3.data" [chartLabels]="graficos.grafico3.labels" [chartType]="graficos.grafico3.type">
+                </app-graphics>
             </div>
         </div>
     </div>
@@ -42,10 +37,9 @@
     <div class="col-6">
         <div class="card">
             <div class="card-body">
-                <div style="display: block">
-                    <canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType">
-          </canvas>
-                </div>
+                <h4 class="card-title">{{graficos.grafico4.leyenda}}</h4>
+                <app-graphics [chartData]="graficos.grafico4.data" [chartLabels]="graficos.grafico4.labels" [chartType]="graficos.grafico4.type">
+                </app-graphics>
             </div>
         </div>
     </div>
